[package]
authors = [
  "Eirik Albrigtsen <eirik.albrigtsen@babylonhealth.com>",
]
name = "shipcat_finalizers"
description = "Undeploy right meow."
version = "0.153.0"
homepage = "https://github.com/babylonhealth/shipcat"
edition = "2018"

[[bin]]
doc = false
name = "shipcat_finalizers"
path = "src/main.rs"

[dependencies]
shipcat_definitions = { path = "../shipcat_definitions" }
kube = { git = "https://github.com/clux/kube-rs", rev = "4d971668a19c67a750bbd5d4324c5f228f82f1e8" }
k8s-openapi = { version = "0.8.0", features = ["v1_14"], default-features = false }
serde_json = "1.0.32"
serde_yaml = "0.8.9"
serde = "1.0.92"
serde_derive = "1.0.92"
url = "2.1.1"
http = "0.1.13"
env_logger = "0.7.1"
log = "0.4.6"
reqwest = { version = "0.10.6" }
tokio = { version = "0.2.11", features = ["full"] }
anyhow = "1.0.31"
futures = "0.3.5"
